fixed .contact alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,4 +223,17 @@ section {
     margin: 30px 0 0 60px;
     color: white; 
 }
+.contact h3{
+    color:#fce138;
+    font-size: 32px;
+}
+.contact-info p. .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20ps;
+    font-style: normal;
+}
+contact info a{
+    color:#fce138
+}
 /*Reach Out Styles Ends*/
